# k8s-proxmox-cluster

./: README.md  mypy.ini  proxmox-conf-example.json  pyproject.toml  sadfdf.py  vm-complex-conf-example.json  vm-simple-conf-example.json
kubeSetup/: __init__.py  __main__.py  cli.py
kubeSetup/commands/: __init__.py  _cluster_cleanup.py  _complexCluster.py  _simpleCluster.py
kubeSetup/commands/_utils/: __init__.py
kubeSetup/commands/_utils/_proxmox/: _proxmox.py
kubeSetup/commands/_utils/_setup/: __init__.py  _proxmox_conf.py  _vm_conf.py
kubeSetup/commands/_utils/_setup/tests/: test_proxmox_conf.py  test_vm_conf.py
kubeSetup/commands/_utils/_simpleCluster/: __init__.py  _setup.py
kubeSetup/commands/_utils/_simpleCluster/_templates/: calico.j2  calico.yaml
kubeSetup/commands/utils/: __init__.py
kubeSetup/commands/utils/_clusterSetup/: __init__.py  _schemas.py  _setup.py
kubeSetup/commands/utils/_clusterSetup/templates/complex/: calico.j2  kubeadm-config.j2
kubeSetup/commands/utils/_clusterSetup/templates/simple/: kubeadm-config.j2
kubeSetup/commands/utils/_complexCluster/: __init__.py  _haproxy_setup.py  _keepalive_setup.py  _setup.py
kubeSetup/commands/utils/_complexCluster/_templates/: check_apiserver-template.j2  haproxy-conf.j2  keepalived-conf.j2
kubeSetup/commands/utils/_proxmox/: __init__.py  _proxmox.py
kubeSetup/commands/utils/_setup/: __init__.py  _proxmox_conf.py  _schemas.py  _utils.py  _vm_cleanup_conf.py  _vm_complex_conf.py  _vm_simple_conf.py
kubeSetup/commands/utils/_setup/tests/: test_proxmox_conf.py  test_vm_conf.py
kubeSetup/commands/utils/_setupUtils/: __init__.py  _general_commands.py  _logging.py  _preconf.py  _setup_utils.py  _ssh_connection.py  _vm_utils.py
kubeSetup/commands/utils/_simpleCluster/: __init__.py  _setup.py  _setup_utils.py
